--- a/08-lorem-ipsum/setup/src/index.css
+++ b/08-lorem-ipsum/setup/src/index.css
@@ -146,6 +146,7 @@ p {
 }
 
 .section-center {
+  position: relative;
   width: 90vw;
   margin: 0 auto;
   max-width: 40rem;
@@ -197,4 +198,15 @@ button {
 }
 .result {
   margin-bottom: 2rem;
+}
+.modal {
+  position: absolute;
+  top: 10px;
+  left: 25%;
+
+  padding: 1rem;
+  width: 60%;
+  margin: 0 auto;
+  color: var(--clr-red-light);
+  font-size: 1rem;
 }
